test/good/datatype_declarations.mpp
data intlist = #NIL
             | #CONS of int * intlist;
var L:intlist;

data inttree = #LEAF   of int
             | #BRANCH of inttree * inttree;
