test/bad/type_declaration_10.mpp
data foo = #Quux of * | #Bar;
